--- a/package.json
+++ b/package.json
@@ -9,6 +9,16 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^5.15.2"
+    "@midudev/tailwind-animations": "^0.2.0",
+    "@supabase/supabase-js": "^2.78.0",
+    "@tailwindcss/vite": "^4.1.16",
+    "astro": "5.15.2",
+    "tailwindcss": "^4.1.16",
+    "jszip": "3.10.1",
+    "zod": "^3.25.76"
+  }
+  ,
+  "overrides": {
+    "jszip": "3.10.1"
   }
 }
