--- a/vercel.json
+++ b/vercel.json
@@ -3,11 +3,5 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "astro",
-  "env": {
-    "PUBLIC_SUPABASE_URL": "@public_supabase_url",
-    "PUBLIC_SUPABASE_ANON_KEY": "@public_supabase_anon_key",
-    "SUPABASE_URL": "@supabase_url",
-    "SUPABASE_ANON_KEY": "@supabase_anon_key",
-    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
-  }
+  "env": {}
 }
