Security: block .sql exposure via middleware; remove SQL scripts from repo; move global save button to Admin; Excel export uses .xlsm template

--- a/.gitignore
+++ b/.gitignore
@@ -16,10 +16,13 @@ pnpm-debug.log*
 # environment variables
 .env
 .env.production
-.env.local
 
 # macOS-specific files
 .DS_Store
 
 # jetbrains setting folder
 .idea/
+
+# internal SQL scripts (do not publish)
+scripts/**/*.sql
+src/db/**/*.sql
