--- a/vercel.json
+++ b/vercel.json
@@ -3,5 +3,11 @@
   "outputDirectory": "dist",
   "installCommand": "npm install",
   "framework": "astro",
-  "env": {}
+  "env": {
+    "PUBLIC_SUPABASE_URL": "@public_supabase_url",
+    "PUBLIC_SUPABASE_ANON_KEY": "@public_supabase_anon_key",
+    "SUPABASE_URL": "@supabase_url",
+    "SUPABASE_ANON_KEY": "@supabase_anon_key",
+    "SUPABASE_SERVICE_ROLE_KEY": "@supabase_service_role_key"
+  }
 }
