feat: integrar endpoint externo Supabase + headers; configurar adapter Vercel; alinear override xlsx; sanitizar .env.example y ignorar .env.local

--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "astro": "5.15.2",
     "jszip": "3.10.1",
     "tailwindcss": "4.1.16",
-    "xlsx": "0.20.3",
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz",
     "zod": "3.25.76"
   },
   "overrides": {
     "jszip": "3.10.1",
-    "xlsx": "https://cdn.sheetjs.com/xlsx-0.20.3/xlsx-0.20.3.tgz"
+    "xlsx": "https://cdn.sheetjs.com/xlsx-0.18.5/xlsx-0.18.5.tgz"
+  },
+  "devDependencies": {
+    "@astrojs/vercel": "^9.0.0"
   }
 }
